--- a/app/assets/stylesheets/login.css
+++ b/app/assets/stylesheets/login.css
@@ -12,5 +12,23 @@
  *
  *= require_tree .
  *= require_self
- 
  */
+
+ /*!
+  * Start Bootstrap - Full HTML Template (http://startbootstrap.com)
+  * Code licensed under the Apache License v2.0.
+  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
+  */
+
+ body {
+     margin-top: 50px; /* Required margin for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+ }
+
+ /* Header Image Background - Change the URL below to your image path (example: ../images/background.jpg) */
+
+ .full {
+     -webkit-background-size: cover;
+     -moz-background-size: cover;
+     background-size: cover;
+     -o-background-size: cover;
+ }
