--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -12,7 +12,7 @@
 
               <h1>Ingreso</h1>
 
-              <%= form_tag(controller: "login", action: "validate", method: "get") do |f| %>
+              <%= form_tag(controller: "login", action: "validate") do |f| %>
                   <div class="form-group">
                       <div class="col-md-12" style="margin-bottom : 5px">
                           <input class="form-control" id="inputEmail" name="username" placeholder="Codigo" type="text">
