--- a/app/views/encuesta/encuesta.html.erb
+++ b/app/views/encuesta/encuesta.html.erb
@@ -36,42 +36,45 @@
 
   }
   </script>
-      <nav class="navbar navbar-default navbar-fixed-top">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button> -->
-                    <a class="navbar-brand" href="#"> ${ encuesta.Estudiante.findByCodigo(session.user).nombre } </a>
-                </div>
-
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav navbar-right" style="padding-bottom : 0px">
-                        <li><a href="/encuesta/estudiante/index"><span class=" glyphicon glyphicon-home" style="font-size: 24px;"></span></a></li>
-                        <li><a href="/encuesta/user/logout"><span class=" glyphicon glyphicon-log-out" style="font-size: 24px;"></span></a></li>
-                        <li><img src="${assetPath(src: 'Engineer.png')}" rel="images" style="height: 50px; width : 50px; margin : 10px"></img></li>
-                    </ul>
-                </div>
+  <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button> -->
+                <a class="navbar-brand" href="#"><%= @active.name %></a>
             </div>
-        </nav>
 
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right" style="padding-bottom : 0px">
+                    <li><a href="/encuesta/estudiante/index"><span class=" glyphicon glyphicon-home" style="font-size: 24px;"></span></a></li>
+                    <li><a href="/encuesta/user/logout"><span class=" glyphicon glyphicon-log-out" style="font-size: 24px;"></span></a></li>
+                    <li><%= image_tag('Engineer.png', :size => '60x60') %></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+        <br><br><br>
         <section class="container">
-            <g:form name="formulario1" method="POST" controller="estudiante" action="realizado1" >
+
+
+            <form name="formulario1" method="POST" action="../encuesta/save" >
+              <input type="hidden" name="student" value="<%= @active.token %>">
              <table  class="table table-bordered prueba"  >
 
 				<thead >
 					<tr>
 					   <br>
-						<g:sortableColumn property="pregunta" title="${message(code: 'trip.city.label', default: 'Numero')}" />
-					    <g:sortableColumn property="pregunta" title="${message(code: 'trip.city.label', default: 'Pregunta')}" />
-						<g:sortableColumn property="opcion1" title="${message(code: 'trip.numberoftrips.label', default: 'Siempre')}" />
-						<g:sortableColumn property="opcion2" title="${message(code: 'trip.numberoftrips.label', default: 'Casi siempre')}" />
-						<g:sortableColumn property="opcion3" title="${message(code: 'trip.numberoftrips.label', default: 'Algunas veces')}" />
-						<g:sortableColumn property="opcion4" title="${message(code: 'trip.numberoftrips.label', default: 'Nunca')}" />
-						<g:sortableColumn property="opcion5" title="${message(code: 'trip.numberoftrips.label', default: '0')}" />
+						<sortableColumn property="pregunta" title="${message(code: 'trip.city.label', default: 'Numero')}" />
+					    <sortableColumn property="pregunta" title="${message(code: 'trip.city.label', default: 'Pregunta')}" />
+						<sortableColumn property="opcion1" title="${message(code: 'trip.numberoftrips.label', default: 'Siempre')}" />
+						<sortableColumn property="opcion2" title="${message(code: 'trip.numberoftrips.label', default: 'Casi siempre')}" />
+						<sortableColumn property="opcion3" title="${message(code: 'trip.numberoftrips.label', default: 'Algunas veces')}" />
+						<sortableColumn property="opcion4" title="${message(code: 'trip.numberoftrips.label', default: 'Nunca')}" />
+						<sortableColumn property="opcion5" title="${message(code: 'trip.numberoftrips.label', default: '0')}" />
 					</tr>
 				</thead>
 
@@ -369,9 +372,9 @@
 
                     </div>
 
-                 </g:form>
+                 </form>
 
 
 
 
-         </section>                
+         </section>
