--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -15,11 +15,11 @@
               <%= form_tag(controller: "login", action: "validate") do |f| %>
                   <div class="form-group">
                       <div class="col-md-12" style="margin-bottom : 5px">
-                          <input class="form-control" id="inputEmail" name="username" placeholder="Codigo" type="text">
+                          <input class="form-control" id="inputEmail" name="username" placeholder="Codigo" type="password"  autocomplete="off">
                       </div>
 
                       <div class="col-md-12" style="margin-bottom : 5px">
-                          <input class="form-control" name="password"  placeholder="Contraseña" type="password">
+                          <input class="form-control" name="password"  placeholder="Contraseña" type="password" autocomplete="off">
                       </div>
                          <div class="col-md-6" style="margin-bottom : 5px; text-align: left">
 
