--- a/app/views/encuesta/download.html.erb
+++ b/app/views/encuesta/download.html.erb
@@ -36,49 +36,42 @@
 
   }
   </script>
-  <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button> -->
-                <a class="navbar-brand" href="#"><%= @active.name %></a>
-            </div>
+      <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button> -->
+                    <a class="navbar-brand" href="#"> ${ encuesta.Estudiante.findByCodigo(session.user).nombre } </a>
+                </div>
 
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right" style="padding-bottom : 0px">
-                    <li><a href="/encuesta/estudiante/index"><span class=" glyphicon glyphicon-home" style="font-size: 24px;"></span></a></li>
-                    <li><a href="/encuesta/user/logout"><span class=" glyphicon glyphicon-log-out" style="font-size: 24px;"></span></a></li>
-                    <li><%= image_tag('Engineer.png', :size => '60x60') %></li>
-                </ul>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-right" style="padding-bottom : 0px">
+                        <li><a href="/encuesta/estudiante/index"><span class=" glyphicon glyphicon-home" style="font-size: 24px;"></span></a></li>
+                        <li><a href="/encuesta/user/logout"><span class=" glyphicon glyphicon-log-out" style="font-size: 24px;"></span></a></li>
+                        <li><img src="${assetPath(src: 'Engineer.png')}" rel="images" style="height: 50px; width : 50px; margin : 10px"></img></li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
-        <br><br><br>
+        </nav>
+
         <section class="container">
-
-
-            <form name="formulario1" method="POST" action="../encuesta/save" >
-              <input type="hidden" name="student" value="<%= @active.token %>">
-              <input type="hidden" name="profesor" value="<%= session[:profesor] %>">
-              <input type="hidden" name="subject" value="<%= session[:subject] %>">
-
-
+            <g:form name="formulario1" method="POST" controller="estudiante" action="realizado1" >
              <table  class="table table-bordered prueba"  >
 
 				<thead >
 					<tr>
 					   <br>
-						<sortableColumn property="pregunta" title="${message(code: 'trip.city.label', default: 'Numero')}" />
-					    <sortableColumn property="pregunta" title="${message(code: 'trip.city.label', default: 'Pregunta')}" />
-						<sortableColumn property="opcion1" title="${message(code: 'trip.numberoftrips.label', default: 'Siempre')}" />
-						<sortableColumn property="opcion2" title="${message(code: 'trip.numberoftrips.label', default: 'Casi siempre')}" />
-						<sortableColumn property="opcion3" title="${message(code: 'trip.numberoftrips.label', default: 'Algunas veces')}" />
-						<sortableColumn property="opcion4" title="${message(code: 'trip.numberoftrips.label', default: 'Nunca')}" />
-						<sortableColumn property="opcion5" title="${message(code: 'trip.numberoftrips.label', default: '0')}" />
+						<g:sortableColumn property="pregunta" title="${message(code: 'trip.city.label', default: 'Numero')}" />
+					    <g:sortableColumn property="pregunta" title="${message(code: 'trip.city.label', default: 'Pregunta')}" />
+						<g:sortableColumn property="opcion1" title="${message(code: 'trip.numberoftrips.label', default: 'Siempre')}" />
+						<g:sortableColumn property="opcion2" title="${message(code: 'trip.numberoftrips.label', default: 'Casi siempre')}" />
+						<g:sortableColumn property="opcion3" title="${message(code: 'trip.numberoftrips.label', default: 'Algunas veces')}" />
+						<g:sortableColumn property="opcion4" title="${message(code: 'trip.numberoftrips.label', default: 'Nunca')}" />
+						<g:sortableColumn property="opcion5" title="${message(code: 'trip.numberoftrips.label', default: '0')}" />
 					</tr>
 				</thead>
 
@@ -360,11 +353,11 @@
 				</table>
 
                    <div class="col-md-12" style="margin-bottom : 3px">
-                      <input class="form-control" id="bueno" name="bueno" placeholder="Consideras que tu docentes es bueno por:" type="text"  autocomplete="off">
+                      <input class="form-control" id="bueno" name="bueno" placeholder="Consideras que tu docentes es bueno por:" type="text">
                    </div>
 
                    <div class="col-md-12" style="margin-bottom : 3px">
-                         <input class="form-control" name="mejorar"  placeholder="Sería mejor docente si:" type="text" autocomplete="off">
+                         <input class="form-control" name="mejorar"  placeholder="Sería mejor docente si:" type="text">
                    </div>
 
 
@@ -376,9 +369,9 @@
 
                     </div>
 
-                 </form>
+                 </g:form>
 
 
 
 
-         </section>
+         </section>                
